<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#92badd"
    tools:context=".activity.Leader">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">


        <ImageButton
            android:id="@+id/btnlogout"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/logout" />

        <TextView
            android:id="@+id/nama_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/btnlogout"
            android:background="#FFFFFF"
            android:text="@string/nama"
            android:textColor="#000000"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/cv_img"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:srcCompat="@drawable/logo" />
    </RelativeLayout>

    <TextView
        android:id="@+id/opsi_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/arial"
        android:text="@string/opsi"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UnknownId" />


    <RelativeLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/opsi_scan"
        app:layout_constraintTop_toBottomOf="@+id/opsi_scan"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="145dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="#000000"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:background="#ffffff"
                        android:src="@drawable/tmmin" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:text="HYUNDAI"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="145dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                app:cardBackgroundColor="#d9d9d9"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:background="#ffffff"
                        android:src="@drawable/denso" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:text="@string/scanBarcode"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="145dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="#d9d9d9"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:background="#ffffff"
                        android:src="@drawable/tmmin" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/scanQR"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="6dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/black"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:fabCustomSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.964"
        app:srcCompat="@android:drawable/arrow_up_float"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="User"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton1"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton1"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton1"
        app:layout_constraintVertical_bias="0.523" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        app:fabCustomSize="40dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton2"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton2"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton2"
        app:srcCompat="@drawable/ic_user"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="Product"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton2"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton2"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton2"
        app:layout_constraintVertical_bias="0.523" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        app:fabCustomSize="40dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton3"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton3"
        app:srcCompat="?attr/actionModePasteDrawable"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/riwayat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="Riwayat Scan"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton3"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton3"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton3"
        app:layout_constraintVertical_bias="0.523" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        app:fabCustomSize="40dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton"
        app:srcCompat="@android:drawable/ic_menu_recent_history" />




</androidx.constraintlayout.widget.ConstraintLayout>